Made a search function and a page for creating a team.

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 	<h1>Result</h1>
-    <p th:text="'id: ' + ${search.content}" />
     <p th:text="'Name: ' + ${pokemonName}"/>
     <p th:text="'Weight: ' + ${pokemonWeight}"/>
         <p th:text="'Height: ' + ${pokemonHeight}"/>
-    <a href="/search">Submit another message</a>
+    <a href="/team">Submit another message</a>
 </body>
 </html>
